crates/keron-lang/tests/corpus/errors/check/match_missing_wildcard_string.keron
fn label(s: String): Int {
  match s {
    "a" => 1,
    "b" => 2,
  }
}
